sumo/tests/netconvert/errors/XML/broken_edge/edge#length__empty4/errors.netconvert
Error: Empty length definition of edge '4'.
Quitting (on error).
